update competition for robosoul

--- a/competition/competition.html
+++ b/competition/competition.html
@@ -126,7 +126,7 @@
                         <thead>
                             <tr>
                                 <th>轮次</th>
-                                <th>对战双方</th>
+                                <th colspan="3" style="text-align: center;">对战双方</th>
                                 <th>结果 (比分)</th>
                                 <th>获胜队伍</th>
                             </tr>
@@ -134,37 +134,89 @@
                         <tbody>
                             <tr>
                                 <td>CS2 5v5对抗赛</td>
-                                <td>A1 vs A2</td>
+                                <td class="team-col">A1</td>
+                                <td class="vs-col">vs</td>
+                                <td class="team-col">A2</td>
                                 <td>13 - 6</td>
                                 <td><span class="team-winner">A1</span></td>
                             </tr>
                             <tr>
                                 <td>CS2 5v5对抗赛</td>
-                                <td>B1 vs B2</td>
+                                <td class="team-col">B1</td>
+                                <td class="vs-col">vs</td>
+                                <td class="team-col">B2</td>
                                 <td>8 - 13</td>
                                 <td><span class="team-winner">B2</span></td>
                             </tr>
                             <tr>
-                                <td>Robosouls 3V3对抗赛</td>
-                                <td>(待定) vs (待定)</td>
+                                <td>Robosouls 3V3对抗赛 A组第一轮</td>
+                                <td class="team-col">smp</td>
+                                <td class="vs-col">vs</td>
+                                <td class="team-col">云汉TDT</td>
                                 <td>(待定)</td>
                                 <td>(待定)</td>
                             </tr>
                             <tr>
-                                <td>Robosouls 3V3对抗赛</td>
-                                <td>(待定) vs (待定)</td>
+                                <td>Robosouls 3V3对抗赛 A组第二轮</td>
+                                <td class="team-col">耿队</td>
+                                <td class="vs-col">vs</td>
+                                <td class="team-col">smp</td>
                                 <td>(待定)</td>
                                 <td>(待定)</td>
                             </tr>
                             <tr>
-                                <td>Robosouls 3V3对抗赛</td>
-                                <td>(待定) vs (待定)</td>
+                                <td>Robosouls 3V3对抗赛 A组第三轮</td>
+                                <td class="team-col">云汉TDT</td>
+                                <td class="vs-col">vs</td>
+                                <td class="team-col">耿队</td>
                                 <td>(待定)</td>
                                 <td>(待定)</td>
                             </tr>
                             <tr>
-                                <td>Robosouls 3V3对抗赛</td>
-                                <td>(待定) vs (待定)</td>
+                                <td>Robosouls 3V3对抗赛 B组第一轮</td>
+                                <td class="team-col">咕咕嘎嘎队</td>
+                                <td class="vs-col">vs</td>
+                                <td class="team-col">1️⃣➕🎺</td>
+                                <td>(待定)</td>
+                                <td>(待定)</td>
+                            </tr>
+                            <tr>
+                                <td>Robosouls 3V3对抗赛 B组第二轮</td>
+                                <td class="team-col">一空输</td>
+                                <td class="vs-col">vs</td>
+                                <td class="team-col">咕咕嘎嘎队</td>
+                                <td>(待定)</td>
+                                <td>(待定)</td>
+                            </tr>
+                            <tr>
+                                <td>Robosouls 3V3对抗赛 B组第三轮</td>
+                                <td class="team-col">1️⃣➕🎺</td>
+                                <td class="vs-col">vs</td>
+                                <td class="team-col">一空输</td>
+                                <td>(待定)</td>
+                                <td>(待定)</td>
+                            </tr>
+                            <tr>
+                                <td>Robosouls 3V3对抗赛 半决赛第一轮</td>
+                                <td class="team-col">(待定)</td>
+                                <td class="vs-col">vs</td>
+                                <td class="team-col">(待定)</td>
+                                <td>(待定)</td>
+                                <td>(待定)</td>
+                            </tr>
+                            <tr>
+                                <td>Robosouls 3V3对抗赛 半决赛第二轮</td>
+                                <td class="team-col">(待定)</td>
+                                <td class="vs-col">vs</td>
+                                <td class="team-col">(待定)</td>
+                                <td>(待定)</td>
+                                <td>(待定)</td>
+                            </tr>
+                            <tr>
+                                <td>Robosouls 3V3对抗赛 决赛</td>
+                                <td class="team-col">(待定)</td>
+                                <td class="vs-col">vs</td>
+                                <td class="team-col">(待定)</td>
                                 <td>(待定)</td>
                                 <td>(待定)</td>
                             </tr>
