--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 <article class="project-card">
                     <div class="card-icon">🎮</div>
                     <h3>精彩赛事</h3>
-                    <p>志豪杯即将开赛</p>
+                    <p>志豪杯现已开赛</p>
                     <div class="card-bg-image" style="background-image: url('/images/champion.jpg');"></div>
                 </article>
             </a>
