update robosouls competition situation

--- a/competition/competition.html
+++ b/competition/competition.html
@@ -153,72 +153,80 @@
                                 <td class="team-col">smp</td>
                                 <td class="vs-col">vs</td>
                                 <td class="team-col">云汉TDT</td>
-                                <td>(待定)</td>
-                                <td>(待定)</td>
+                                <td>0 - 2</td>
+                                <td><span class="team-winner">云汉TDT</span></td>
                             </tr>
                             <tr>
                                 <td>Robosouls 3V3对抗赛 A组第二轮</td>
                                 <td class="team-col">耿队</td>
                                 <td class="vs-col">vs</td>
                                 <td class="team-col">smp</td>
-                                <td>(待定)</td>
-                                <td>(待定)</td>
+                                <td>0 - 2</td>
+                                <td><span class="team-winner">smp</span></td>
                             </tr>
                             <tr>
                                 <td>Robosouls 3V3对抗赛 A组第三轮</td>
                                 <td class="team-col">云汉TDT</td>
                                 <td class="vs-col">vs</td>
                                 <td class="team-col">耿队</td>
-                                <td>(待定)</td>
-                                <td>(待定)</td>
+                                <td>2 - 0</td>
+                                <td><span class="team-winner">云汉TDT</span></td>
                             </tr>
                             <tr>
                                 <td>Robosouls 3V3对抗赛 B组第一轮</td>
                                 <td class="team-col">咕咕嘎嘎队</td>
                                 <td class="vs-col">vs</td>
                                 <td class="team-col">1️⃣➕🎺</td>
-                                <td>(待定)</td>
-                                <td>(待定)</td>
+                                <td>1 - 2</td>
+                                <td><span class="team-winner">1️⃣➕🎺</span></td>
                             </tr>
                             <tr>
                                 <td>Robosouls 3V3对抗赛 B组第二轮</td>
                                 <td class="team-col">一空输</td>
                                 <td class="vs-col">vs</td>
                                 <td class="team-col">咕咕嘎嘎队</td>
-                                <td>(待定)</td>
-                                <td>(待定)</td>
+                                <td>0 - 2</td>
+                                <td><span class="team-winner">咕咕嘎嘎队</span></td>
                             </tr>
                             <tr>
                                 <td>Robosouls 3V3对抗赛 B组第三轮</td>
                                 <td class="team-col">1️⃣➕🎺</td>
                                 <td class="vs-col">vs</td>
                                 <td class="team-col">一空输</td>
-                                <td>(待定)</td>
-                                <td>(待定)</td>
+                                <td>2 - 0</td>
+                                <td><span class="team-winner">1️⃣➕🎺</span></td>
                             </tr>
                             <tr>
                                 <td>Robosouls 3V3对抗赛 半决赛第一轮</td>
-                                <td class="team-col">(待定)</td>
+                                <td class="team-col">云汉TDT</td>
                                 <td class="vs-col">vs</td>
-                                <td class="team-col">(待定)</td>
-                                <td>(待定)</td>
-                                <td>(待定)</td>
+                                <td class="team-col">咕咕嘎嘎队</td>
+                                <td>2 - 0</td>
+                                <td><span class="team-winner">云汉TDT</span></td>
                             </tr>
                             <tr>
                                 <td>Robosouls 3V3对抗赛 半决赛第二轮</td>
-                                <td class="team-col">(待定)</td>
+                                <td class="team-col">1️⃣➕🎺</td>
                                 <td class="vs-col">vs</td>
-                                <td class="team-col">(待定)</td>
-                                <td>(待定)</td>
-                                <td>(待定)</td>
+                                <td class="team-col">smp</td>
+                                <td>2 - 1</td>
+                                <td><span class="team-winner">1️⃣➕🎺</span></td>
+                            </tr>
+                            <tr>
+                                <td>Robosouls 3V3对抗赛 季军争夺赛</td>
+                                <td class="team-col">咕咕嘎嘎队</td>
+                                <td class="vs-col">vs</td>
+                                <td class="team-col">smp</td>
+                                <td>2 - 1</td>
+                                <td><span class="team-winner">咕咕嘎嘎队</span></td>
                             </tr>
                             <tr>
                                 <td>Robosouls 3V3对抗赛 决赛</td>
-                                <td class="team-col">(待定)</td>
+                                <td class="team-col">云汉TDT</td>
                                 <td class="vs-col">vs</td>
-                                <td class="team-col">(待定)</td>
-                                <td>(待定)</td>
-                                <td>(待定)</td>
+                                <td class="team-col">1️⃣➕🎺</td>
+                                <td>2 - 0</td>
+                                <td><span class="team-winner">云汉TDT</span></td>
                             </tr>
                         </tbody>
                     </table>
