--- a/competition/competition.html
+++ b/competition/competition.html
@@ -20,7 +20,7 @@
 
     <aside class="floating-buttons">
         <button class="float-btn">🌙</button>
-        <button class="float-btn">⬆️</button>
+        <button class="float-btn" onclick="scrollToTop()">⬆️</button>
     </aside>
 
     <div class="container">
@@ -312,6 +312,12 @@
             }
         } catch (error) {
             console.error("轮播图脚本出错:", error);
+        }
+        function scrollToTop() {
+            window.scrollTo({
+                top: 0,
+                behavior: 'smooth' // 平滑滚动
+            });
         }
     </script>
 </body>
