--- a/about/about.html
+++ b/about/about.html
@@ -18,7 +18,7 @@
 
     <aside class="floating-buttons">
         <button class="float-btn">🌙</button>
-        <button class="float-btn">⬆️</button>
+        <button class="float-btn" onclick="scrollToTop()">⬆️</button>
     </aside>
 
     <div class="container">
@@ -127,6 +127,12 @@
                 localStorage.setItem('theme', 'light'); // 保存 'light'
             }
         });
+        function scrollToTop() {
+            window.scrollTo({
+                top: 0,
+                behavior: 'smooth' // 平滑滚动
+            });
+        }
     </script>
 </body>
 
