--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <aside class="floating-buttons">
         <button class="float-btn">🌙</button>
-        <button class="float-btn">⬆️</button>
+        <button class="float-btn" onclick="scrollToTop()">⬆️</button>
     </aside>
 
     <div class="container">
@@ -72,12 +72,14 @@
                 </article>
             </a>
 
-            <article class="project-card">
-                <div class="card-icon">🌞</div>
-                <h3>优秀队员展示</h3>
-                <p>一支优秀的队伍源自一群优秀队员</p>
-                <div class="card-bg-image" style="background-image: url('/images/25GS.jpg');"></div>
-            </article>
+            <a href="/members/members.html">
+                <article class="project-card">
+                    <div class="card-icon">🌞</div>
+                    <h3>优秀队员展示</h3>
+                    <p>一支优秀的队伍源自一群优秀队员</p>
+                    <div class="card-bg-image" style="background-image: url('/images/25GS.jpg');"></div>
+                </article>
+            </a>
 
             <a href="/robots/robots.html">
                 <article class="project-card">
@@ -147,6 +149,13 @@
                 localStorage.setItem('theme', 'light'); // 保存 'light'
             }
         });
+
+        function scrollToTop() {
+            window.scrollTo({
+                top: 0,
+                behavior: 'smooth' // 平滑滚动
+            });
+        }
     </script>
 </body>
 
