update members YJX

--- a/members/members.html
+++ b/members/members.html
@@ -88,9 +88,10 @@
             <div class="container member-content">
                 <div class="member-gallery">
                     <div class="carousel" data-autoplay="true">
-                        <div class="slide active" style="background-image: url('/images/YJX-1.jpg');"></div>
+                        <div class="slide active" style="background-image: url('/images/YJX-4.jpg');"></div>
                         <div class="slide" style="background-image: url('/images/YJX-2.jpg');"></div>
                         <div class="slide" style="background-image: url('/images/YJX-3.jpg');"></div>
+                        <div class="slide" style="background-image: url('/images/YJX-1.jpg');"></div>
                         
                         <button class="carousel-btn prev">❮</button>
                         <button class="carousel-btn next">❯</button>
@@ -108,19 +109,19 @@
                     
                     <div class="info-block">
                         <h4>🏆 主要贡献</h4>
-                        <p>负责哨兵、无人机自瞄，独立重构了装甲板识别算法，实现多线程并行识别，将识别帧率从 60fps 提升至 120fps</p>
+                        <p>主要负责哨兵、无人机自瞄。独立重构了装甲板识别算法，并实现多线程并行识别，将识别帧率从 60fps 大幅提升至 150fps。同时，开发了基于多线程的全向感知算法，在25赛季中大放异彩。</p>
                     </div>
 
                     <div class="info-block">
                         <h4>🚀 经历</h4>
-                        <p>曾获 RoboMaster 机甲大师高校赛全国一等奖。大二期间负责视觉组培训工作，建立了完善的新队员培养体系。</p>
+                        <p>曾获 RoboMaster 机甲大师高校赛全国一等奖。大三期间负责视觉组培训工作，建立了完善的新队员培养体系。大四转入电控组，开始负责轮腿的控制算法开发。</p>
                     </div>
 
                     <div class="tech-stack">
                         <span>C++</span>
                         <span>OpenCV</span>
                         <span>Deep Learning</span>
-                        <span>Yolo</span>
+                        <span>Control</span>
                         <span>极致</span>
                     </div>
                 </div>
